--- a/src/main/resources/fxml/baseApp.fxml
+++ b/src/main/resources/fxml/baseApp.fxml
@@ -35,7 +35,7 @@
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                      </GridPane.margin>
                   </AnchorPane>
-                  <AnchorPane fx:id="graphPane" prefHeight="200.0" prefWidth="200.0" styleClass="panel" GridPane.rowIndex="1">
+                  <AnchorPane fx:id="chartsPane" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
                      <GridPane.margin>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                      </GridPane.margin>
@@ -115,7 +115,7 @@
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                      </GridPane.margin>
                   </AnchorPane>
-                  <AnchorPane fx:id="graphChoicePane" prefHeight="200.0" prefWidth="200.0" styleClass="panel" GridPane.rowIndex="2">
+                  <AnchorPane fx:id="chartChoicePane" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
                      <GridPane.margin>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                      </GridPane.margin>
