--- a/src/main/resources/fxml/stylesheets/style.css
+++ b/src/main/resources/fxml/stylesheets/style.css
@@ -44,3 +44,20 @@
     -fx-background-repeat: no-repeat;
     -fx-background-position: center;
 }
+
+.chart-line-mySymbol {
+    -fx-scale-x: 0.7;
+    -fx-scale-y: 0.7;
+}
+
+
+.Total {
+    -fx-stroke: black;
+    -fx-background-color : black;
+}
+
+.chart-legend-item-clicked {
+    -fx-background-color : lightgray;
+    -fx-background-radius: 5px;
+    -fx-padding: 2px;
+}
