--- a/src/main/resources/fxml/stylesheets/style.css
+++ b/src/main/resources/fxml/stylesheets/style.css
@@ -33,14 +33,14 @@
 
 .summer-button {
     -fx-background-image: url("/environment/hot_icon.png");
-    -fx-background-size: 50px 50px;
+    -fx-background-size: 3em 3em;
     -fx-background-repeat: no-repeat;
     -fx-background-position: center;
 }
 
 .winter-button {
     -fx-background-image: url("/environment/cold_icon.png");
-    -fx-background-size: 50px 50px;
+    -fx-background-size: 3em 3em;
     -fx-background-repeat: no-repeat;
     -fx-background-position: center;
 }
