refactoring of css class name

--- a/src/main/resources/fxml/stylesheets/style.css
+++ b/src/main/resources/fxml/stylesheets/style.css
@@ -92,43 +92,43 @@
     -fx-background-color : #c5e1a5;
 }
 
-.Pelo_Biancopie {
+.Pelo_Bianco_Pie {
     -fx-pie-color: #80cbc4;
 }
 
-.Pelo_Marronepie {
+.Pelo_Marrone_Pie {
     -fx-pie-color: #4f9a94;
 }
 
-.Pelo_Cortopie{
+.Pelo_Corto_Pie {
     -fx-pie-color: #ffab91;
 }
 
-.Pelo_Lungopie {
+.Pelo_Lungo_Pie {
     -fx-pie-color: #c97b63;
 }
 
-.Orecchie_Altepie{
+.Orecchie_Alte_Pie {
     -fx-pie-color: #ce93d8;
 }
 
-.Orecchie_Bassepie{
+.Orecchie_Basse_Pie {
     -fx-pie-color: #9c64a6;
 }
 
-.Salto_Altopie{
+.Salto_Alto_Pie {
     -fx-pie-color : #94af76;
 }
 
-.Salto_Bassopie{
+.Salto_Basso_Pie {
     -fx-pie-color : #c5e1a5;
 }
 
-.Denti_Cortipie{
+.Denti_Corti_Pie {
     -fx-pie-color : #90caf9;
 }
 
-.Denti_Lunghipie{
+.Denti_Lunghi_Pie {
     -fx-pie-color: #5d99c6;
 }
 
