--- a/src/main/resources/fxml/proportionsChartPane.fxml
+++ b/src/main/resources/fxml/proportionsChartPane.fxml
@@ -29,7 +29,7 @@
             </HBox>
             <VBox prefHeight="400.0" prefWidth="127.0" GridPane.columnIndex="1">
                <children>
-                  <RadioButton mnemonicParsing="false" onAction="#onRadioButtonClick" selected="true" text="Colore Pelo">
+                  <RadioButton mnemonicParsing="false" onAction="#onRadioButtonClick" selected="true" text="Colore pelliccia">
                      <VBox.margin>
                         <Insets />
                      </VBox.margin>
@@ -40,7 +40,12 @@
                         <ToggleGroup fx:id="pieChart" />
                      </toggleGroup>
                   </RadioButton>
-                  <RadioButton mnemonicParsing="false" onAction="#onRadioButtonClick" text="Lunghezza Pelo" toggleGroup="$pieChart">
+                  <RadioButton mnemonicParsing="false" onAction="#onRadioButtonClick" text="Lunghezza pelo" toggleGroup="$pieChart">
+                     <padding>
+                        <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
+                     </padding>
+                  </RadioButton>
+                  <RadioButton mnemonicParsing="false" onAction="#onRadioButtonClick" text="Lunghezza denti" toggleGroup="$pieChart">
                      <padding>
                         <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
                      </padding>
@@ -50,12 +55,7 @@
                         <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
                      </padding>
                   </RadioButton>
-                  <RadioButton mnemonicParsing="false" onAction="#onRadioButtonClick" text="Denti" toggleGroup="$pieChart">
-                     <padding>
-                        <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
-                     </padding>
-                  </RadioButton>
-                  <RadioButton mnemonicParsing="false" onAction="#onRadioButtonClick" text="Salto" toggleGroup="$pieChart">
+                  <RadioButton mnemonicParsing="false" onAction="#onRadioButtonClick" text="Altezza salto" toggleGroup="$pieChart">
                      <padding>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="5.0" />
                      </padding>
