Mutations panel reset

--- a/src/main/resources/fxml/baseApp.fxml
+++ b/src/main/resources/fxml/baseApp.fxml
@@ -107,7 +107,7 @@
                                         <Insets />
                                     </GridPane.margin>
                                 </HBox>
-                        <Button fx:id="restartButton" mnemonicParsing="false" text="Restart" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="6">
+                        <Button fx:id="resetButton" mnemonicParsing="false" text="Reset" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="6" onAction="#resetSimulationClick">
                            <GridPane.margin>
                               <Insets right="40.0"/>
                            </GridPane.margin>
