fixed radio button selection when simulation restart

--- a/src/main/resources/fxml/chartChoiceSelection.fxml
+++ b/src/main/resources/fxml/chartChoiceSelection.fxml
@@ -19,7 +19,7 @@
                   <Insets bottom="10.0" />
                </VBox.margin>
             </Label>
-            <RadioButton contentDisplay="CENTER" mnemonicParsing="false" onAction="#showPopulationChart" selected="true" text="Popolazione" textOverrun="CENTER_ELLIPSIS" wrapText="true">
+            <RadioButton fx:id="populationRadioButton" contentDisplay="CENTER" mnemonicParsing="false" onAction="#showPopulationChart" selected="true" text="Popolazione" textOverrun="CENTER_ELLIPSIS" wrapText="true">
                <toggleGroup>
                   <ToggleGroup fx:id="chartChoice" />
                </toggleGroup>
